src/run/ci_provider/github_actions/snapshots/codspeed_runner__run__ci_provider__github_actions__provider__tests__fork_pull_request_provider_metadata.snap
---
source: src/run/ci_provider/github_actions/provider.rs
expression: provider_metadata
---
{
  "ref": "refs/pull/22/merge",
  "headRef": "fork-owner:feat/codspeed-runner",
  "baseRef": "main",
  "owner": "my-org",
  "repository": "adrien-python-test",
  "event": "pull_request",
  "ghData": {
    "runId": 6957110437,
    "job": "log-env",
    "sender": {
      "id": 19605940,
      "login": "adriencaccia"
    }
  },
  "repositoryRootPath": "/home/runner/work/adrien-python-test/adrien-python-test/"
}
